--- a/components/zabugnp5t-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/zabugnp5t-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zabugnp5t-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-2912baf00f.u7ya.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:d9f8d022e3f534704c18bc3d0559d2f9680fdd3f@sha256:c4dc9e8af7cef5f6ffaf4c0c4297640592998f4c85591fdfaef1b044628ae154
+          name: container-image
